update form vào kho

--- a/Quan_Ly_Kho/Quan_Ly_Kho/Quan_Ly_Kho.csproj
+++ b/Quan_Ly_Kho/Quan_Ly_Kho/Quan_Ly_Kho.csproj
@@ -34,6 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DevComponents.DotNetBar2">
+      <HintPath>F:\tai_lieu_hoc_tap\BT_nhom\TTN-TH248-master\DevComponents.DotNetBar2.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -64,6 +65,12 @@
       <DependentUpon>frmQuanLyKho.cs</DependentUpon>
     </Compile>
     <Compile Include="HANGHOADATA.cs" />
+    <Compile Include="Login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Login.designer.cs">
+      <DependentUpon>Login.cs</DependentUpon>
+    </Compile>
     <Compile Include="NHASANXUATDATA.cs" />
     <Compile Include="PHIEUNHAPDATA.cs" />
     <Compile Include="Program.cs" />
@@ -73,6 +80,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmQuanLyKho.resx">
       <DependentUpon>frmQuanLyKho.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Login.resx">
+      <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
